# client

client/: .gitignore  package-lock.json  package.json
client/src/: main.css
client/src/composables/: useFilePreview.ts
client/src/layouts/: MainLayout.vue
client/src/router/: index.ts
client/src/shared/composables/: use-file-preview.ts
client/src/shared/services/: file-preview.service.ts
client/src/shared/types/: file-preview.types.ts
client/src/views/: AnimaliumView.vue
client/src/views/components/: FileFormSection.vue  ImageGalleryResults.vue  ResultSection.vue
recognition/: .env.example  .gitignore  main.py  pyproject.toml
recognition/app/: clients.py  inference.py  model.py  router.py  schemas.py  service.py
